--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <h2>🍽 Popular Dishes</h2>
     <div class="menu">
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1601924638867-3ec62f01f1c0" />
+        <img src="https://www.tasteofhome.com/recipes/margherita-pizza/" />
         <h3>Margherita Pizza</h3>
         <p class="price">₹299</p>
         <button onclick="addToCart('Margherita Pizza',299)">Add to Cart</button>
@@ -65,7 +65,7 @@
         <button onclick="addToCart('Cheese Burger',199)">Add to Cart</button>
       </div>
       <div class="card">
-        <img src="https://images.unsplash.com/photo-1600628422019-5d4e6b6e6f8b" />
+        <img src="https://www.madhuseverydayindian.com/easy-vegetable-biryani/" />
         <h3>Veg Biryani</h3>
         <p class="price">₹149</p>
         <button onclick="addToCart('Veg Biryani',249)">Add to Cart</button>
